--- a/src/global.css
+++ b/src/global.css
@@ -1,23 +1,45 @@
-
-
-/**
- * WHAT IS THIS FILE?
- *
- * Globally applied styles. No matter which components are in the page or matching route,
- * the styles in here will be applied to the Document, without any sort of CSS scoping.
- *
- */
 html {
-  -webkit-text-size-adjust: 100%;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol', 'Noto Color Emoji';
+  --hue: 260;
+  --block-padding: var(--size-1) var(--size-2);
+  font-family: var(--font-family);
+  background-image: none;
+  scroll-padding-top: 80px;
 }
 
 body {
+  min-height: 100dvh;
+  margin:0;
   padding: 0;
   line-height: inherit;
+  background-image: linear-gradient(
+    to bottom,
+    oklch(95% 0.02 var(--hue)),
+    var(--background) 200px
+  );
+}
+@media (prefers-color-scheme: dark) {
+  body {
+    background-image: linear-gradient(
+      to bottom,
+      oklch(30% var(--chroma) var(--hue)),
+      var(--background) 200px
+    );
+  }
+}
+
+.surface {
+  border-radius: var(--size-0);
+  background-color: var(--surface);
+  padding: var(--block-padding);
+}
+
+.btn, .btn-fill, .btn-outline {
+  display: inline-flex;
+  align-items: center;
+  gap: var(--size-1);
+}
+.btn svg, .btn-fill svg, .btn-outline svg {
+  fill: currentColor;
+  width: 24px;
+  height: 24px;
 }
