--- a/src/components/bucket/bucket.css
+++ b/src/components/bucket/bucket.css
@@ -1,13 +1,19 @@
-.bucket {
+.bucket-trigger {
+  --btn-expand-width: 200px;
   position: fixed;
   bottom: var(--size-2);
   right: var(--size-2);
+  z-index: 1;
 }
-.bucket button {
+.bucket-trigger button {
   font-size: 1rem;
 }
-.bucket[aria-expanded="true"] {
-  --btn-expand-width: 200px;
+
+.bucket-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: var(--size-1);
+  height: 100%;
 }
 
 .bucket-list {
@@ -16,7 +22,44 @@
   list-style: none;
   display: flex;
   flex-direction: column;
+  gap: var(--size-2);
+  padding: var(--size-2);
+  flex: 1;
+  overflow: auto;
 }
+
 .bucket-list li {
+  display: grid;
+  gap: var(--size-1);
+  grid-template-columns: 50px auto;
+  grid-template-rows: auto auto;
   padding: var(--block-padding);
+  background-image: var(--background-image);
+  border-radius: var(--size-0);
+  border: 1px solid var(--outline);
+}
+.bucket-list img {
+  grid-row: 1 / span 2;
+  width: 100%;
+  height: auto;
+  place-self: center;
+}
+.bucket-list li header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: var(--size-1);
+}
+.bucket-list li footer {
+  display: flex;
+  align-items: center;
+  gap: var(--size-1);
+}
+
+.bucket-buy {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--block-padding);
+  background-color: var(--background);
 }
