--- a/src/global.css
+++ b/src/global.css
@@ -137,3 +137,21 @@ body {
   top: 25%;
   right: 110%;
 }
+
+
+.action-list {
+  list-style: none;
+  margin-block: 0;
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  border-radius: var(--size-0);
+}
+.action-list li {
+  display: contents;
+}
+.action-list button {
+  border: none;
+  background-color: transparent;
+  padding: var(--size-1) var(--size-2);
+}
