--- a/src/routes/pool/[poolId]/index.css
+++ b/src/routes/pool/[poolId]/index.css
@@ -1,10 +1,8 @@
 
-#pool > header {
-  padding: 160px 80px;
-  background-image: url('https://i.seadn.io/gae/YPGHP7VAvzy-MCVU67CV85gSW_Di6LWbp-22LGEb3H6Yz9v4wOdAaAhiswnwwL5trMn8tZiJhgbdGuBN9wvpH10d_oGVjVIGM-zW5A?auto=format&dpr=1&w=3840');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+#pool > header img {
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
 }
 
 #pool-performance > header {
