--- a/src/components/wallet/wallet.css
+++ b/src/components/wallet/wallet.css
@@ -5,20 +5,41 @@
 }
 
 .wallet-widget {
-  border-radius: var(--size-0);
+  --radius: 20px;
+  position: relative;
+  border-radius: var(--radius);
   border: 1px solid var(--outline);
+  background-image: var(--background-image);
+  padding: 1px; /* Used for hover on inner buttons*/
+  isolation: isolate;
+}
+.wallet-widget::before {
+  content: "";
+  background-color: var(--background);
+  border-radius: var(--radius);
+  inset: 1px;
+  position: absolute;
+  z-index: -1;
 }
 
 .wallet-widget button {
   border: none;
+  background-color: transparent;
   padding: var(--size-1) var(--size-2);
+}
+.wallet-widget button:hover {
+  background-color: var(--surface);
+}
+.wallet-widget button:active {
+  background-color:  var(--surface-higher);
 }
 
 .wallet-widget button:first-child {
-  border-top-left-radius: var(--size-0);
-  border-bottom-left-radius: var(--size-0);
+  border-top-left-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-right: solid 1px var(--divider);
 }
 .wallet-widget button:last-child {
-  border-top-right-radius: var(--size-0);
-  border-bottom-right-radius: var(--size-0);
+  border-top-right-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
 }
