--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,10 @@
+:root {
+  --primary-hue: 172 !important;
+  --secondary-hue:var(--hue) !important;
+}
+
 html {
-  --hue: 260;
+  --hue: 232;
   --block-padding: var(--size-1) var(--size-2);
   font-family: var(--font-family);
   background-image: none;
