--- a/src/components/bucket/bucket.scss
+++ b/src/components/bucket/bucket.scss
@@ -48,6 +48,10 @@
       flex-direction: column;
       gap: var(--size-1);
     }
+    li {
+      display: flex;
+      justify-content: space-between;
+    }
     strong {
       font-size: inherit;
       color: var(--primary);
