--- a/src/components/bucket/bucket.scss
+++ b/src/components/bucket/bucket.scss
@@ -14,8 +14,8 @@
   flex-direction: column-reverse;
   justify-content: space-between;
   height: 100%;
-  min-width: 300px;
-  
+  width: 300px;
+
   .empty {
     margin: var(--size-2);
     background-color: var(--surface);
@@ -75,10 +75,10 @@
     gap: var(--size-1);
     grid-template-columns: 50px auto;
     grid-template-rows: auto auto;
-    padding: var(--block-padding);
     background-image: var(--background-image);
     border-radius: var(--size-0);
     border: 1px solid var(--outline);
+    padding: var(--block-padding);
   }
   .bucket-list img {
     grid-row: 1 / span 2;
