--- a/src/routes/pool/[poolId]/token/[tokenId]/index.scss
+++ b/src/routes/pool/[poolId]/token/[tokenId]/index.scss
@@ -60,7 +60,7 @@
     max-width: 60ch;
   }
   
-  .token-details .bucket-token {
+  .token-details .bucket-actions {
     display: flex;
     align-items: center;
     gap: var(--size-1);
@@ -90,9 +90,15 @@
       display: flex;
       flex-direction: column;
       gap: var(--size-2);
+      width: 300px;
+      max-width: 80vw;
+      margin-top: var(--size-1);
+      margin-bottom: 56px;
     }
     .token-details img {
       align-self: center;
+      width: 100%;
+      height: auto;
     }
     .attributes {
       flex-direction: column;
